# 2blang

./: .editorconfig  .gitignore  .npmrc  CMakeLists.txt  CMakePresets.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: deploy-website.yml  deploy.yml  merge.yml
assets/: grammar.ebnf
compiler/: CMakeLists.txt
compiler/src/wasm-api/: api.cc
content/docs/: index.md
content/spec/: index.md
content/website/: index.md
docs/: foo.md  index.md
patches/: @nuxt__content.patch
scripts/: merge-manifest.ts  stage-deploy.ts  tsconfig.json
spec/: index.md
web/apps/docs/: content.config.ts  nuxt.config.ts  package.json
web/apps/docs/components/: DocsSearch.vue  DocsSidebar.vue  DocsSidebarTree.vue  IdeTryIt.client.vue
web/apps/docs/layouts/: default.vue
web/apps/docs/pages/: [...slug].vue
web/apps/landing/: eslint.config.mjs  nuxt.config.ts  package.json  uno.config.ts
web/apps/landing/layouts/: default.vue
web/apps/landing/pages/: downloads.vue  explore.vue  index.vue
web/apps/spec/: content.config.ts  nuxt.config.ts  package.json
web/apps/spec/components/: SpecToc.vue
web/apps/spec/layouts/: default.vue  print.vue
web/apps/spec/pages/: [...slug].vue  print.vue
web/scripts/: build-all-versions.ts  build-version.ts  copy-content.ts  package.json  version-manifest.ts
web/website/: nuxt.config.ts  package.json
web/website/content/: grammar.ebnf  index.md
web/website/tests/: ebnf-railroad.test.ts
web/website/vite-plugins/: git-versioning.d.ts  git-versioning.ts
(+9 files in other folders)
